syntax = "proto3";

package car;

option go_package = "github.com/dailoi280702/se121/car-service/pkg/car";

import "./utils.proto"
import "./car.proto"
import "./blog.proto"

service SearchService {
  rpc Search(utils.SearchReq) returns (SearchRes);
}

message SearchRes {
    SearchForCarRes cars = 1;
    SearchForBrandRes brands = 2;
    SearchBlogsRes blogs = 3;
}
